[tool.poetry]
name = "rl-examples"
version = "0.1.0"
description = ""
authors = ["Vishwanath Sangale"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.0"
torchvision = "^0.8.1"
gym = "^0.17.3"
tensorboard = "^2.3.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
